[gd_scene load_steps=10 format=3 uid="uid://c03w5836cbglv"]

[ext_resource type="Script" uid="uid://utdrntkf6xwf" path="res://entities/hud/game_over_ui/game_over_ui.gd" id="1_r4glw"]
[ext_resource type="Texture2D" uid="uid://dlp25yu8gyl5k" path="res://assets/sprites/hud/select_icon_5.png" id="2_3a365"]
[ext_resource type="Theme" uid="uid://cx4ebwibnxeqt" path="res://assets/themes/main.tres" id="3_60bms"]

[sub_resource type="AtlasTexture" id="AtlasTexture_61qlu"]
atlas = ExtResource("2_3a365")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_840rd"]
atlas = ExtResource("2_3a365")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cvkc"]
atlas = ExtResource("2_3a365")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_72k0i"]
atlas = ExtResource("2_3a365")
region = Rect2(36, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdi4e"]
atlas = ExtResource("2_3a365")
region = Rect2(48, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_4sbwp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61qlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_840rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cvkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72k0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdi4e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="GameOverUi" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r4glw")

[node name="SelectIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(488, 200)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4sbwp")
autoplay = "default"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.176471)

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 128.0
offset_right = 736.0
offset_bottom = 180.0
theme = ExtResource("3_60bms")
theme_override_font_sizes/font_size = 56
text = "GAME OVER"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -140.0
offset_right = 160.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_60bms")
theme_override_constants/separation = 10

[node name="RestartButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../BackToMenuButton")
text = "RESTART"
language = "en_US"

[node name="BackToMenuButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../RestartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Main Menu"
language = "en_US"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../BackToMenuButton")
text = "Quit
"
language = "en_US"

[connection signal="focus_entered" from="Buttons/RestartButton" to="." method="_on_restart_button_focus_entered"]
[connection signal="mouse_entered" from="Buttons/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="focus_entered" from="Buttons/BackToMenuButton" to="." method="_on_back_to_menu_button_focus_entered"]
[connection signal="mouse_entered" from="Buttons/BackToMenuButton" to="." method="_on_back_to_menu_button_mouse_entered"]
[connection signal="pressed" from="Buttons/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="focus_entered" from="Buttons/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="mouse_entered" from="Buttons/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
